<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    tools:context=".Settings.TipsResource">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/tips_resource_toolbar"
            layout="@layout/tips_resource_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="Chinese Language"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/lastnocis"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/tip_resource"
                android:fontFamily="@font/poppins_regular"
                android:textColor="#000"/>

            <TextView
                android:text="@string/website_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="4dp"
                android:text="@string/sitename"
                android:textColor="#000" />

            <TextView
                android:text="@string/youtube_channel"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="4dp"
                android:text="@string/chaneel_item"
                android:textColor="#000" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>