<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    tools:context=".Settings.AboutChineseHelper">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/about_chinese_helper_toolbar"
            layout="@layout/about_chinese_help_toolbar"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/app_logo"
                android:layout_gravity="center"
                android:layout_width="250dp"
                android:layout_height="100dp"/>

            <TextView
                android:layout_marginTop="4dp"
                android:text="Chinese Helper"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/lastnocis"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="Version 1.0"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/app_details"
                android:fontFamily="@font/poppins_regular"
                android:textColor="#423D3D"/>

            <TextView
                android:text="@string/featureshsk"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#393232"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="4dp"
                android:text="@string/features_item"
                android:textColor="#423D3D" />

            <TextView
                android:text="@string/categories"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#393232"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="4dp"
                android:text="@string/categories_item"
                android:textColor="#423D3D" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>